feat: reimplement spec queue pt2: backend core
